fix: align card display and img

--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -1,7 +1,8 @@
 @import '@/styles/utils/variables';
 
 .card {
-  width: 18.25rem;
+  width: 18.75rem;
+  min-height: 22.875rem;
   margin: 0.625rem;
   background-color: $bg-color;
   border: 0.06rem solid $border-color;
@@ -9,10 +10,6 @@
   box-shadow: 0 0.125rem 1.25rem rgba(0, 0, 0, 0.2);
   overflow: hidden;
   cursor: pointer;
-  img {
-    width: 100%;
-    height: 12.5rem;
-  }
 }
 
 .cardbody {
