--- a/components/Logo/Logo.module.scss
+++ b/components/Logo/Logo.module.scss
@@ -11,5 +11,5 @@
 }
 
 .img {
-  width: 3.75rem;
+  width: auto;
 }
